# alsa-fftw

./: 2.cpp  CMakeLists.txt  README.md  alsa-record-example.c  alsainfo.c  alsainfo.cpp  playback.c  record.c  record.cpp  setting.c  test1.c  test2.c
